Fixed spacing on index pages

--- a/css/index-page.css
+++ b/css/index-page.css
@@ -11,6 +11,10 @@
 	position: relative;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom: 0;
+}
+
 .section-head {
 	margin-bottom: 1em;
 }
